--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-repository-manager-6o8",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "publisher": "6o8",
   "displayName": "GitHub Repository Manager (6o8 AVA)",
   "description": "Easily and quickly clone and access your GitHub repositories and create new ones",
@@ -173,6 +173,11 @@
         "icon": "$(repo-create)"
       },
       {
+        "title": "Clone into Managed Directory",
+        "command": "githubRepoMgr.commands.repos.cloneManaged",
+        "icon": "$(clone)"
+      },
+      {
         "title": "Repositories: Sort by Last Updated",
         "command": "githubRepoMgr.commands.repos.sort.lastUpdated",
         "icon": "$(list-ordered)"
@@ -282,6 +287,11 @@
           "group": "navigation@1"
         },
         {
+          "command": "githubRepoMgr.commands.repos.cloneManaged",
+          "when": "view == githubRepoMgr.views.repositories && githubRepoMgr.userState == 'logged'",
+          "group": "navigation@1.5"
+        },
+        {
           "command": "githubRepoMgr.commands.repos.createRepo",
           "when": "view == githubRepoMgr.views.repositories && githubRepoMgr.userState == 'logged'",
           "group": "navigation@2"
@@ -345,32 +355,32 @@
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.open",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "0@0"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.openInNewWindow",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "0@1"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.addToWorkspace",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "0@2"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.openContainingFolder",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "1@0"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.copyPath",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "1@1"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.delete",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "1@2"
         },
         {
@@ -405,12 +415,12 @@
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.openInNewWindow",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "inline@1"
         },
         {
           "command": "githubRepoMgr.commands.clonedRepos.openContainingFolder",
-          "when": "viewItem == githubRepoMgr.context.clonedRepo",
+          "when": "viewItem =~ /githubRepoMgr\\.context\\.(clonedRepo|hiddenClonedRepo)/",
           "group": "inline@2"
         },
         {
