--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-repository-manager-6o8",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "publisher": "6o8",
   "displayName": "GitHub Repository Manager (6o8 AVA)",
   "description": "Easily and quickly clone and access your GitHub repositories and create new ones",
@@ -326,16 +326,21 @@
         {
           "command": "githubRepoMgr.commands.notClonedRepos.hideOrg",
           "when": "viewItem == githubRepoMgr.context.notClonedOrg",
-          "group": "0@-1"
+          "group": "5@0"
         },
         {
           "command": "githubRepoMgr.commands.notClonedRepos.hideRepo",
           "when": "viewItem == githubRepoMgr.context.notClonedRepo",
-          "group": "0@-1"
+          "group": "5@0"
         },
         {
           "command": "githubRepoMgr.commands.notClonedRepos.unhideOrg",
           "when": "viewItem == githubRepoMgr.context.hiddenNotClonedOrg",
+          "group": "0@-1"
+        },
+        {
+          "command": "githubRepoMgr.commands.notClonedRepos.unhideOrg",
+          "when": "viewItem == githubRepoMgr.context.partiallyHiddenNotClonedOrg",
           "group": "0@-1"
         },
         {
@@ -396,6 +401,11 @@
         {
           "command": "githubRepoMgr.commands.clonedRepos.unhideOrg",
           "when": "viewItem == githubRepoMgr.context.hiddenClonedOrg",
+          "group": "2@0"
+        },
+        {
+          "command": "githubRepoMgr.commands.clonedRepos.unhideOrg",
+          "when": "viewItem == githubRepoMgr.context.partiallyHiddenClonedOrg",
           "group": "2@0"
         },
         {
